[project]
name = "cybersecurity-scanner"
version = "1.0.0"
description = "Pluggable cybersecurity toolkit with MCP server, CLI, and autonomous agent integration"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "python-nmap>=0.7.1",
    "cyclonedx-python-lib>=7.0",
    "compliance-trestle>=2.0",
    "anthropic>=0.50.0",
]

[project.optional-dependencies]
ob1 = ["psycopg2-binary>=2.9"]

[project.scripts]
scanner = "scanner.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
